Continue slight improvements in draft doc.

--- a/PaperDraft/howmany_NEW.htm
+++ b/PaperDraft/howmany_NEW.htm
@@ -29,7 +29,7 @@ padding-bottom: 3px;
 <p>% How Many Copies Is Enough?<br />
 % Micah Altman; Richard Landau<br />
 % 2016-08-15<br />
-% Revised 2018-06-22 RBL</p>
+% Revised 2018-06-25 RBL</p>
 <p>[[Text blocks in double-square-brackets, such as this is, are editorial notes for the authors to clean up.]]</p>
 <h1 id="title" class="unnumbered">Information Integrity Over the Long Term -- How Many Copies Is Enough?</h1>
 <h4 id="assessing-long-term-durability-of-collections-through-a-flexible-replicable-simulation">Assessing Long-term Durability of Collections Through A Flexible, Replicable Simulation</h4>
@@ -53,7 +53,7 @@ padding-bottom: 3px;
 <li><p>Thou shalt lovingly squeeze and <strong>compress thy documents</strong>, that they may be better protected from the elements.</p></li>
 <li><p>Thou shalt respect and <strong>monitor the independence of thy vendors</strong>.</p></li>
 <li><p>Thou shalt be wary that <strong>vendors are ephemeral</strong>. Therefore shalt thou befriend more vendors than thou currently doth engage, for they may be friends in lean years of woe and hardship.</p></li>
-<li><p>Thou shalt <strong>attend mainly to things within thy control</strong> and less to others.</p></li>
+<li><p>Thou shalt <strong>attend mainly to what is within thy control</strong>, and less to others.</p></li>
 <li><p>Thou shalt <strong>cloak thy documents</strong> in secret robes, if they be shy, to keep them from prying eyes.</p></li>
 <li><p>Thou shalt <strong>not heed disk dealers</strong> who bear false witness of their reliability. Rather, thou shalt <strong>heed the measurement of thine own experience</strong> and that of thy neighbors.</p></li>
 <li><p>Thou shalt engage with thy community to <strong>develop standards</strong> for the benefit of all.</p></li>
@@ -71,7 +71,7 @@ padding-bottom: 3px;
 <li><p>MTBF discussion: cite returns and other bases for the numbers.</p></li>
 <li><p>Is a combo of two Poissons itself Poisson?</p></li>
 <li><p>The high end of lifetime is hard to assess.</p></li>
-<li><p>Argue that the same hygiene regime serves for both: crappier disks and less wonderul independence. Still need multiples, audit, repair.</p></li>
+<li><p>Argue that the same hygiene regime serves for both: crappier disks and less wonderful independence. Still need multiples, audit, repair.</p></li>
 <li><p>Check Azure erasure code stats.</p></li>
 <li><p>Multiple copies, error correction, repair are used at all levels: bits, sectors, files, drives, services. We are adding files to the usual mix.</p></li>
 <li>Audit whatever the fundamental unit of failure is: bit, sector, disk, file, server.
@@ -94,9 +94,10 @@ padding-bottom: 3px;
 <li><p>Detecting errors: say &quot;fixity&quot;</p></li>
 <li><p>Can use the terms patrolling, replication, fixity.</p></li>
 <li><p>Assert &quot;indefinitely long&quot; or beyond any epsilon.</p></li>
-<li>Do a looong test to get down to &lt; 1ppm over 100 years. 1ppb preferred, but nobody has that much computer time.<br />
-</li>
-<li><p>Probably 10 copies, quarterly auditing; 1000 runs.</p></li>
+<li>Do a looong test to get down to &lt; 1ppm over 100 years. 1ppb preferred, but nobody has that much computer time.
+<ul>
+<li>Probably 10 copies, quarterly auditing; 1000 runs.</li>
+</ul></li>
 <li>Economics = files for this audience. Be careful about file losses, not disks. - For larger or smaller than file, sort of don't care. [Adjacent-above and below. Except servers, of course, where we do care and have control.]
 <ul>
 <li>Focus on level meaningful to you = files (=documents).</li>
@@ -189,7 +190,7 @@ padding-bottom: 3px;
 <blockquote>
 <p>&quot;Time and accident are committing daily havoc on the originals deposited in our public offices. . . . The lost cannot be recovered; but let us save what remains: not by vaults and locks which fence them from the public eye and use, in consigning them to the waste of time, but by such a multiplication of copies, as shall place them beyond the reach of accident.&quot; <a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a></p>
 </blockquote>
-<p>But even multiple copies of collections deteriorate over time, from small erosions of individual documents or larger losses from external shocks. <strong>Exhibit nnn</strong> shows the deterioration of collections with multiple copies over long periods of time. [[RBL: find the results for this case.]] A modest number of copies, even of very high quality, cannot guarantee archival storage over long periods. A strategy that includes monitoring and repair of documents is required for long-term preservation.</p>
+<p>But even multiple copies of collections deteriorate over time, from small erosions of individual documents or larger losses from external shocks. <strong>Exhibit nnn</strong> shows the deterioration of collections with multiple copies over long periods of time. [[RBL: find or regenerate the results for this case.]] A modest number of copies, even of very high quality, cannot guarantee archival storage over long periods. A strategy that includes monitoring and repair of documents is required for long-term preservation.</p>
 <h1 id="protect-against-a-wide-range-of-conditions">Protect Against a Wide Range of Conditions</h1>
 <h3 id="what-range-of-storage-error-rates-should-we-consider">What Range of Storage Error Rates Should We Consider?</h3>
 <p>One basic question should be answered before embarking on such simulations: what is the failure rate of stored documents? This is a difficult question due to a lack of real data.</p>
