Continue small improvements to draft doc.

--- a/PaperDraft/howmany_NEW.htm
+++ b/PaperDraft/howmany_NEW.htm
@@ -460,9 +460,15 @@ padding-bottom: 3px;
 <p>In these simulations, we have modeled documents as <em>very fragile</em>: one sector error causes the document to be judged as lost. In this model, at least these two considerations should be included in the decision to compress documents.</p>
 <ul>
 <li>Smaller is safer. A smaller document presents a smaller target for random errors. If a document is compressed, say, by 90%, that is, to 10% of its original size, then a random error is only one-tenth as likely to strike that document. When placed on a storage medium of any given quality level, that smaller, compressed document is likely to persist without error ten times longer than the uncompressed version.</li>
-<li>Smaller is less expensive. A stored collection incurs costs for both storage of the document images and the bandwidth used in auditing and repair. Smaller documents consume less space and less bandwidth and therefore cost less to maintain. On a given budget, a compressed collection can be replicated into more copies and audited more frequently. Both the increased copy count and more frequent auditing contribute directly to reducing or eliminating permanent losses in the collection.</li>
 </ul>
+<blockquote>
 <p>A large document occupies more storage than a small document. If errors are striking storage uniformly randomly, then a large document is proportionally a larger target. This effect is verified empirically by our experiments.</p>
+</blockquote>
+<ul>
+<li>Smaller is less expensive. A stored collection incurs costs for both storage of the document images and the bandwidth used in auditing and repair. Smaller documents consume less space and less bandwidth and therefore cost less to maintain.<br />
+</li>
+<li>Smaller enables higher storage redundancy. On a given budget, a compressed collection can be replicated into more copies and audited more frequently. Both the increased copy count and more frequent auditing contribute directly to reducing or eliminating permanent losses in the collection.</li>
+</ul>
 <p>The drawings in <strong>Exhibit nnn</strong> illustrate the effect of randomly placed errors on documents of varying sizes. [[Picture from old presentation of doc blocks with Xs in them, with maybe a couple more Xs added to make it clearer that large = big target.]]</p>
 <p><strong>Exhibit nnn</strong> shows the increase in document losses for larger documents across a range of storage error rates.<br />
 [[Picture in pictures/largerdocs, but it needs to be redone.]]</p>
@@ -482,6 +488,7 @@ padding-bottom: 3px;
 <li>An encrypted document is more fragile in the sense that it, if damaged by an error, it may not be recoverable even with extraordinary efforts. (Contrast with text documents, still photo, video, and audio files.)</li>
 <li>A collection of encrypted documents is more subject to large shocks, associated failures where multiple servers are immediately affected. E.g., losing the encryption keys can cause all the copies on several servers to be irretrievable.</li>
 </ul>
+<p>Encrypted documents, like compressed documents, may have a greater need for storage redundancy, auditing, and repair because of their increased fragility.</p>
 <h1 id="a-very-simple-cost-model">A Very Simple Cost Model</h1>
 <p>Many storage vendors may be available to a client, each with charge schedules. For the most part, vendors will charge for storage and bandwidth.</p>
 <ul>
@@ -503,24 +510,19 @@ padding-bottom: 3px;
 <h1 id="judge-the-level-of-storage-quality">Judge the Level of Storage Quality</h1>
 <p>Do not blindly believe reliability estimates from vendors.</p>
 <h3 id="doubt-statistics-of-manufacturers-and-cloud-vendors">Doubt Statistics of Manufacturers and Cloud Vendors</h3>
-<h4 id="dont-believe-tricky-statistics">Don't Believe Tricky Statistics</h4>
-<p>TBS</p>
-<ul>
-<li>be wary of marketing numbers</li>
-<li>mtbf, mttf, and such are particularly hard to grasp</li>
-</ul>
-<p>The likelihood of an error in a disk bit or sector, or even the failure of an entire disk, is a very small number with many zeroes before the first significant digit. We choose to invert the error rate into a function of lifetime of that bit (or sector containing many bits). Thus a probability of a bit failing in a year of 10E-15 becomes a mean lifetime of 100E12 years. Expressed that way, the figure seems excessively optimistic. (The age of the universe is currently estimated to be 14E9 years.) Data on such a disk would be effectively immortal, and that does not correlate with experience.</p>
-<p>We agree with Rosenthal (2010) [[citation needed]] and others that such estimates are merely marketing projections that are often not based on empirical data. Using simulations to investigate such nearly immortal disks would be expensive and fruitless. If there are no errors at all, then no protective strategy is needed. However, the statement &quot;no errors&quot; does not correlate well with practical experience.</p>
-<h4 id="lifetime-easier-to-understand-than-error-rate">Lifetime Easier to Understand Than Error Rate</h4>
+<h4 id="lifetime-is-easier-to-understand-than-error-rate">Lifetime is Easier to Understand Than Error Rate</h4>
 <p>The inverse of error rate is usually expressed in terms of MTBF or MTTF, and, initially, we expressed all parameters as mean exponential lifetime. But MTBF and MTTF are hard even for most experts to grasp, and uninformative or misleading for non-experts.</p>
+<p>The likelihood of an error in a disk bit or sector, or even the failure of an entire disk, is a very small number with many zeroes before the first significant digit. We choose to invert the error rate into a function of lifetime of that bit (or sector containing many bits). Thus a probability of a bit failing in a year of 10E-15 becomes a mean lifetime of 100E12 years. Expressed that way, the figure seems excessively optimistic. (The age of the universe is currently estimated to be 14E9 years.) Data on such a disk would be effectively immortal, and that does not correlate with experience.</p>
+<h3 id="dont-believe-tricky-statistics">Don't Believe Tricky Statistics</h3>
 <h4 id="be-skeptical-of-mtbf">Be Skeptical of MTBF</h4>
 <p>The disk manufacturing industry tends to express the device lifetime as MTBF or MTTF. This is an expected (mean) exponential lifetime for the device, but that does not give much information about the lifetime of data in individual files, blocks, or bits on the disk. There are several layers of error detection and correction in storage systems that tend to mask small errors in disk data and obscure the relationship between small data errors and drive failures.</p>
 <p>MTBF, Mean Time Between Failures, is a slippery notion, much touted by marketing departments and viewed warily by users. Such figures may be derived from drive failure rates observed in accelerated life testing or returns from early deployments. If the object in question is removed from service after only one failure, as is the case here with documents, it is perhaps more appropriate to speak of MTTF, Mean Time To Failure. MTTF is intended to be equivalent to the mean lifetime (before failure) of the object, and, if one assumes that failures are a Poisson process, then MTTF is the mean exponential lifetime of the object.</p>
 <p>Most non-marketing literature considers MTBF estimates from manufacturers to be exaggerated considerably, by factors of three or four at best. The annual failure rates of disk drives in large collections of drives are much higher than would be expected based on published MTBF estimates of 1E6 hours or more. [[citations needed]]</p>
 <p>Even if we understood the source and accuracy of stated MTTF estimates for disk drives, we would still not have information about individual sector failures within a drive that cause document failures, nor the relative frequencies of sector failures versus drive failures.</p>
+<p>We agree with Rosenthal (2010) [[citation needed]] and others that such estimates are merely marketing projections that are often not based on empirical data. Using simulations to investigate such nearly immortal disks would be expensive and fruitless. If there are no errors at all, then no protective strategy is needed. However, the statement &quot;no errors&quot; does not correlate well with practical experience.</p>
 <h3 id="reliability-varies-over-time">Reliability Varies Over Time</h3>
 <h4 id="infant-and-aging-failures">Infant and Aging Failures</h4>
-<p>TBS</p>
+<p>[[RBL: This section should probably be relegated to supplementary material. It is possible that we can simply find a reference with a good description and pictures to handle this discussion entirely.]]</p>
 <ul>
 <li>bathtub curve
 <ul>
@@ -551,44 +553,46 @@ padding-bottom: 3px;
 <h1 id="storage-vendors-may-be-ephemeral">Storage Vendors May be Ephemeral</h1>
 <p>TBS</p>
 <ul>
-<li>plan for failures</li>
+<li>plan for failures and mergers</li>
 <li>plan ahead for replacements</li>
 </ul>
 <h3 id="exceptional-but-realistic-conditions-major-shocks">Exceptional but Realistic Conditions: Major Shocks</h3>
 <p>TBS</p>
+<p>We use the term &quot;shock&quot; to refer to incidents that can weaken or kill a whole server, or even multiple servers.</p>
 <ul>
-<li>shocks that weaken or kill whole servers, multiple servers</li>
-<li>regional: depression, war, earthquake, flood, etc.</li>
-<li><p>human: admin failures, payment arrangements, hostile or government action</p></li>
 <li>A <em>shock</em> is a more serious condition affecting storage servers. This is a temporary, short-lived, or possibly permanent, increase in the likelihood of death of a server. All servers are considered to have finite lives (of random length), though the lives may be very long. A shock reduces that lifetime.<br />
 </li>
 <li>A shock may kill a server immediately, or it may simply increase the likelihood of failure of that server.<br />
 </li>
-<li>What types of shocks might occur? Natural disasters, such as fire, flood, earthquake, volcano, meteor, etc.; economic downturnsin consumer and financial markets; regional wars; government interference; administrative errors such as billing and credit arrangements; and so forth.<br />
+<li>What types of shocks might occur? Some shocks are exogenous: natural disasters, such as fire, flood, earthquake, volcano, meteor, etc.; economic downturns in consumer and financial markets; regional wars; government interference. Others may be endogenous: administrative errors such as billing and credit arrangements; and so forth.<br />
 </li>
 <li>Shocks arrive at random intervals in a Poisson process, and may be immediately fatal to a set of servers or may simply reduce their life expectancies for a period.<br />
 </li>
-<li>The impact of a shock is modeled as silent, that is, no one notices the death of a server until someone tries to retrieve a document from a dead server. Note that a server failure results in the loss of all document copies stored on that server.<br />
+<li>The death of a server as a result of a shock is modeled as silent, that is, no one notices the death of a server until someone tries to retrieve a document from a dead server. Note that a server failure results in the loss of all document copies stored on that server.<br />
 </li>
 <li>Shocks may be regional or administrative phenomena that affect more than one server at a time. One particularly subtle cause of a shock affecting multiple servers is lack of independence of the servers, due to corporate mergers, collocation of server farms, dependence on large power grids, etc.<br />
 </li>
-<li><p>When a server is lost, the client is required to find a new server and populate it with the whole collection -- or at least the parts of the collection that can still be found on the remaining servers.</p></li>
+<li>When a server is lost, the client is required to find a new server and populate it with the whole collection -- or at least the parts of the collection that can still be found on the remaining servers.</li>
 </ul>
 <h1 id="storage-vendors-and-locations-must-be-independent">Storage Vendors and Locations Must be Independent</h1>
-<p>TBS</p>
+<p>An underappreciated source of correlated server failures is lack of independence of storage services. This may stem from several causes.</p>
 <ul>
-<li>financial dependence through mergers</li>
-<li>accidental location dependence through common facilities</li>
-<li>don't keep multiple copies in one facility</li>
+<li>Financial dependence through mergers: companies may merge or be brought together by holding companies that relate their financial structures. As a result, multiple services may share vulnerabilities. A client can suddenly find that it has effectively only N-1 redundant copies of its collection because two of them would fail together.<br />
+</li>
+<li>Accidental location dependence through common facilities: large server farms may be effectively co-located, either through actual physical proximity in a secure computing facility or regional facilities, or through dependence on the same external resources, such as power grids, water supplies for cooling, etc.<br />
+</li>
+<li>Multiple copies kept in one facility: a client might keep two or more copies of a collection in the same server room or IT infrastructure. In such a case, the copies are not sufficiently independent to be considered really redundant.</li>
 </ul>
 <h1 id="develop-standards-for-the-benefit-of-all">Develop Standards for the Benefit of All</h1>
 <h3 id="make-auditing-more-efficient.">Make auditing more efficient.</h3>
 <p>TBS</p>
+<p>Auditing consumes much time, bandwidth, and egress charges from storage services. It would be to everyone's advantage for the process to be more efficient. Verifying document integrity by some means other than full retrieval and comparison could improve the economics for all parties. In particular, methods of cryptographic verification could reduce bandwidth requirements dramatically at the expense of a small increase in computing.</p>
 <ul>
-<li>consumes much time, bandwidth, egress charges</li>
-<li>what is needed: cryptographic verification, checksum with nonce</li>
-<li>work to develop standards for all vendors and clients to use</li>
+<li>For instance, if a client could retrieve a secure checksum of part or all of a document with a client-supplied nonce, the bandwidth required by both the client and the service would be reduced to a small fraction of that required for full-document auditing. Such a transaction would likely be tens of bytes rather than megabytes.<br />
+</li>
+<li>Egress charges from the storage service would be similarly reduced. The storage vendor might impose a small charge for the additional computing cost of the checksumming, but the result would likely be much less than the egress charge for the entire document content.</li>
 </ul>
+<p>We feel that the library &quot;industry&quot; and the cloud storage industry should join to develop standards for some more efficient auditing mechanisms, such as cryptographic checksum with nonce.</p>
 <h1 id="end-of-new-outline">END OF NEW OUTLINE</h1>
 <h1 id="material-from-here-down-will-be-relocated-to-the-proper-place-in-the-new-outline-or-to-supplementry-material.">MATERIAL FROM HERE DOWN WILL BE RELOCATED TO THE PROPER PLACE IN THE NEW OUTLINE, OR TO SUPPLEMENTRY MATERIAL.</h1>
 <h1 id="end-end-end-end-end-end-end-end-end-end-end-end-end">END END END END END END END END END END END END END</h1>
