--- a/PaperDraft/howmany_NEW.htm
+++ b/PaperDraft/howmany_NEW.htm
@@ -16,14 +16,11 @@
 <li><a href="#outline-with-text-in-it">OUTLINE WITH TEXT IN IT</a><ul>
 <li><a href="#abstract"><strong>Abstract</strong></a></li>
 </ul></li>
-<li><a href="#motivation">Motivation</a></li>
+<li><a href="#how-digitization-changes-strategies-for-ensuring-long-term-access.">How digitization changes strategies for ensuring long-term access.</a></li>
 <li><a href="#problem-definition">Problem Definition</a></li>
-<li><a href="#core-risks">Core Risks</a></li>
 <li><a href="#basic-model-and-some-implications">Basic Model and Some Implications</a><ul>
-<li><a href="#very-brief-outline-of-the-model">Very Brief Outline of the Model</a></li>
-<li><a href="#the-simplest-case-sector-errors">The Simplest Case: Sector Errors</a><ul>
-<li><a href="#process">Process</a></li>
-<li><a href="#implications">Implications</a></li>
+<li><a href="#very-brief-outline-of-the-model">Very Brief Outline of the Model</a><ul>
+<li><a href="#the-simplest-case-sector-errors">The Simplest Case: Sector Errors</a></li>
 </ul></li>
 </ul></li>
 <li><a href="#attend-to-what-you-can-control">Attend to What You Can Control</a></li>
@@ -226,30 +223,21 @@ font-size: smaller;
 </ul>
 <!-- a Land Without Rs moment: Lunch at the bar at Legal.  Two guys on my left speak Italian to each other, plain American English to the bartender.  The guy on my right speaks unaccented English to the bartender but is reading a newpaper on his iPad in Swedish. -->
 <!-- END:TODO:RICK -->
-<h1 id="motivation">Motivation</h1>
+<h1 id="how-digitization-changes-strategies-for-ensuring-long-term-access.">How digitization changes strategies for ensuring long-term access.</h1>
 <p>Much ink has been spilled on the subject of the exponential increase in information production in the digital age. And more recently, the durability of digital information has become a important concern for technologists, scholars, and government [CITE]. For example, the biggest long-term archive of information, the Internet Archive currently holds 35 petabytes of information. This is roughly equivalent to the text of 7 million long novels -- or to the amount of new information produced across the globe every 45 minutes, throughout the year. [CITE]</p>
-<ul>
-<li>Information production is rapidly increasing.</li>
-<li>The vast majority of the world's data is stored on rotating disks, 90% in 2007 and not changing very rapidly.</li>
-<li>Digital store changes the goal of preservation, from maintaining a constant optimal physical environment for documents to continual curation in order to maintain document integrity and understanding.</li>
-<li>Information systems are generally designed for immediate use, not for long term access and understanding. Much of the information generated is at risk.</li>
-<li>The changing economics of digital production make it difficult for any one institution to safeguard everything it uses.</li>
-<li>The changing economics also provide opportunities for preservation: replication, cloud services, auditing, and a variety of storage options.</li>
-<li>Curators are faced with a set of choices: storage media, replication, cloud vendors, auditing strategy, encryption, compression. There is currently no systematic guidance based on quantitative models.</li>
-</ul>
+<p>The vast majority of the world's information is stored online or near-line -- using rotating disks, solid state drives, or robotic-tape libraries. [CITE] Much of this information has long-term value to the data controller or to others. And, as it turns out, much of this information is at risk -- since current information systems are designed for current use, and not for long term access and understanding.</p>
+<p>Ensuring the value of long-term access is thus the domain of 'preservation'. The overarching goal of information preservation (or conservation) is to enable meaningful communication with the future through supporting document integrity and understanding -- whether or not the information in digital or tangible form [CITE]. However, the form in which information is represenented can fundamentally changes the strategies used to preserve it: When information is represented in physical form, preservation strategies most often aim to maintain the information-bearing media in a stable state, often by maintaining a constant optimal physical environment. [CITE]</p>
+<p>In contrast, strategies for presrving digital information are generally based on the observation that neither digital media and formats are reliably durable, and thus tht long-term access requires regular curation of the information: Common digital preservation strategies include migrating information to new media, and, less frequently, to new formats. Further, since information in digital form can be read and replicated at a very low marginal cost, relative to tangible content, digital preservation strategies can much more easily include replication and verification of content. [CITE]</p>
+<p>Stewards of digital information are faced with a large set of choices in developing a preservation strategy. These choices include document size and data format; file encryption and compression; storage media durability and reliability; collection replication, distribution, verification, and repair. [CITE] These choices have the potential to change dramatically the cost of a preservation strategy, and how (and where) that strategy is vulnerable to a wide range of threats. Moreover, changes in these factors interact in complex ways -- making it difficult to discover optimal/efficient strategies.</p>
+<p>While a number of 'good practices' are recognized digital preservation [CITE] -- many of these practices are heuristic, and most are based on experience with particular technologies and threats. There is currently no comprehensive framework that enables systematic quantitative prediction of the cost and effectiveness of differing preservation strategies. In the sections below, we develop a framework for just such an analysis, and derive general guidance for the selection of strategies over document size, file compression and encyption, and colection replication, diversification, and auditing.</p>
 <h1 id="problem-definition">Problem Definition</h1>
-<p>TBS</p>
 <ul>
 <li>Maintain understanding of large digital collections over time.</li>
 <li>Choose strategy for collection storage quality, replication, auditing, repair, formatting.</li>
 <li>Risks to collections come from a variety of threat types.</li>
 <li>Problem: Keeping risk of object loss fixed: what choices minimize $ in storage, network, etc.</li>
-<li>&quot;Dual&quot; problem: Keeping $ fixed, what choices minimize risk?</li>
-</ul>
-<h1 id="core-risks">Core Risks</h1>
-<p>TBS</p>
-<ul>
-<li>types and severity of threats <!-- START:TODO:MICAH --> <img src="threats.jpg" title="Various Threat Types (in quotes after the link addr)" alt="Various Threats to Library Collections (in the square brackets)" /></li>
+<li><p>&quot;Dual&quot; problem: Keeping $ fixed, what choices minimize risk?</p></li>
+<li><p>types and severity of threats <!-- START:TODO:MICAH --> <img src="threats.jpg" title="Various Threat Types (in quotes after the link addr)" alt="Various Threats to Library Collections (in the square brackets)" /></p></li>
 </ul>
 <ol style="list-style-type: decimal">
 <li>Document rot (bit rot) on disk.</li>
@@ -269,22 +257,13 @@ font-size: smaller;
 <h2 id="very-brief-outline-of-the-model">Very Brief Outline of the Model</h2>
 <p>A <em>client</em> (library) has a <em>collection</em> of <em>documents</em> in digital form. A copy of the collection of documents is stored on a <em>server</em> somewhere. If the client maintains multiple <em>copies</em> of the collection of documents, the several copies are stored on separate servers. Customers retrieve documents from the server(s) to read them. An <em>error</em> may occur that corrupts a copy of a document or makes that copy inaccessible. In this case, we consider the copy to be <em>lost</em>. Other copies may still persist. If all copies of a document are lost, then the document itself is permanently lost.</p>
 <p>(All the italicized words are terms of art that are discussed in detail later.)</p>
-<h2 id="the-simplest-case-sector-errors">The Simplest Case: Sector Errors</h2>
-<h3 id="process">Process</h3>
+<h3 id="the-simplest-case-sector-errors">The Simplest Case: Sector Errors</h3>
 <ul>
 <li>An error in the storage corrupts a document sector. Errors arrive randomly in a Poisson process. A cosmic ray striking a disk or memory cell is a good model for this type of error.<br />
 </li>
 <li>If the error occurs in a sector occupied by a copy of a document, that copy is corrupted. For the purposes of this study, we consider the copy to be lost. Manual repair by human inspection is not considered here.</li>
 <li>Errors are silent, that is, no one notices an error until someone tries to read the document and discovers that it is lost.</li>
 </ul>
-<h3 id="implications">Implications</h3>
-<p>Errors accumulate over time. Every now and then an error will occur in storage and, if the error occurs in a region of storage occupied by a document, the error destroys a document. The rate at which documents are lost depends of course on the quality of the storage medium. But even if the rate of error accumulation is very low, over a long period of time, many documents will be lost.</p>
-<p>A single copy of a collection will deteriorate as predicted by the Poisson distribution. A collection with multiple copies will deteriorate more slowly, but predictably; and, eventually, all the copies of a single document will be lost. Since no copy of the document is then retrievable, the document is permanently lost.</p>
-<p>The table of <strong>Exhibit nnn</strong> shows the expected rates of document errors, theoretical and simulated, as a calibration check, over a wide range of storage error rates. [[calibration for ncopies=1 in shelf/docs/PoissonFailures.xls]]</p>
-<div class="figure">
-<img src="../pictures/copies1/PoissonFailures.png" alt="Exhibit nnn: Poisson Failures for copies=1 -- !!!REDO TO INCLUDE ONLY ESSENTIALS!!!" />
-<p class="caption">Exhibit nnn: Poisson Failures for copies=1 -- !!!REDO TO INCLUDE ONLY ESSENTIALS!!!</p>
-</div>
 <h1 id="attend-to-what-you-can-control">Attend to What You Can Control</h1>
 <p>Many sources of errors are possible in long-term storage, and at many levels. Consider the following hierarchy:</p>
 <ul>
@@ -306,11 +285,21 @@ font-size: smaller;
 <p>As we will discuss later, we might wish to be aware of the technologies and concerns in the areas we cannot control, but we should reserve our vigilance for the areas that we can control. This paper concentrates on the objects we value -- files containing documents -- and the storage services to which we entrust our valuable files. We suggest strategies in those particular areas that can be used by client libraries to minimize the impact of errors, the ravages of age and administrative inattention, and the vicissitudes of nature, economics, and politics.</p>
 <p>more TBS</p>
 <h1 id="keep-multiple-copies">Keep Multiple Copies</h1>
-<p>Even if errors in a collection do not accumulate at a significant rate, a single copy of a collection is vulnerable to large-scale or total loss if that single copy is victim of a disaster, natural or man-made (e.g., earthquake, flood, war, economic depression, administrative error, etc.). Multiple copies in multiple independent locations are necessary to safeguard documents against this type of large-scale loss. Thomas Jefferson noted this danger to valuable documents long ago.</p>
+<p>Errors accumulate over time. Every now and then an error will occur in storage and, if the error occurs in a region of storage occupied by a document, the error destroys a document. The rate at which documents are lost depends of course on the quality of the storage. In theory, we can predict the detioriation of a collection as a result solely of sector-level losses, using the Poisson distribution. <strong>Figure 1</strong>, below, illustrates the percentage of a collection lost in a 10-year period, as a function of the reliability of the underlying storage.</p>
+<blockquote>
+<p><img src="./images/c1lossesvsquality.png" alt="Graph of cumulative collection losses over time." /> ##### Figure 1: How percentage of collection lost over 10 years as a factor of sector reliability.</p>
+</blockquote>
+<p>As <strong>Figure 1</strong> demonstrates, if a collection exists as only a single copy, then it is very likely that some of its documents will be lost within a decade, even if the storage medium is highly reliable. Further, even if the rate of error accumulation is much lower than illustrated above, many documents will be lost over longer periods of time: For example, over 50 years XX% of the collection will be lost, even if media reliability were 100x the maximum shown above. (For more details, <strong>Table A-1</strong> in the appendices shows the expected rates of document errors, theoretical and simulated, over a range of storage error rates and periods.) [[calibration for ncopies=1 in shelf/docs/PoissonFailure.xls]]</p>
+<p>We are not the first to recommend multiple copies. Thomas Jefferson noted the danger of a single copy of valuable documents long ago.</p>
 <blockquote>
 <p>&quot;Time and accident are committing daily havoc on the originals deposited in our public offices. . . . The lost cannot be recovered; but let us save what remains: not by vaults and locks which fence them from the public eye and use, in consigning them to the waste of time, but by such a multiplication of copies, as shall place them beyond the reach of accident.&quot; <a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a></p>
 </blockquote>
-<p>But even multiple copies of collections deteriorate over time, from small erosions of individual documents or larger losses from external shocks. <strong>Exhibit nnn</strong> shows the deterioration of collections with multiple copies over long periods of time. [[RBL: find or regenerate the results for this case.]] A modest number of copies, even of very high quality, cannot guarantee archival storage over long periods. A strategy that includes monitoring and repair of documents is required for long-term preservation.</p>
+<p>Even multiple copies of collections deteriorate over time, however, from small erosions of individual documents or larger losses from external shocks. <strong>Figure 2</strong> shows the deterioration of collections with multiple copies over long periods of time. [[RBL: find or regenerate the results for this case.]]</p>
+<blockquote>
+<p><img src="./images/baseline-noaudit.png" alt="Graph of cumulative collection losses over time, with replication." /> ##### Figure 2: How percentage of collection lost over 10 years as a factor of both sector reliability and the number of copies</p>
+</blockquote>
+<p>A modest number of copies, even of very high quality, cannot guarantee archival storage over long periods. As figure 2 show, without auditing, at least nine copies are needed to ensure against sector-level loss for even a period of a decade. Further, significant losses will acculate longer periods. For example, to prevent 1% loss of a collection over 50 years, at least XX copies would be needed. (For more details, <strong>Table A-2</strong> in the appendices shows the expected rates of document errors, over a range of storage copies, and time periods.) A strategy that includes monitoring and repair of documents is required for long-term preservation.</p>
+<p>Moreover, even if the media was invulnerable to sector-level errors, a single copy of a collection is vulnerable to large-scale or total loss if that single copy is victim of a disaster, natural or man-made (e.g., earthquake, flood, war, economic depression, administrative error, etc.). As shown in the next section, multiple copies in multiple independent locations are necessary to safeguard documents against this type of large-scale loss.</p>
 <h1 id="protect-against-a-wide-range-of-conditions">Protect Against a Wide Range of Conditions</h1>
 <h3 id="what-range-of-storage-error-rates-should-we-consider">What Range of Storage Error Rates Should We Consider?</h3>
 <p>One basic question should be answered before embarking on such simulations: what is the failure rate of stored documents? This is a difficult question due to a lack of real data.</p>
